# libmimeapps

./: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  DesktopEntry.cpp  DesktopEntry.h  Index.cpp  Index.h  LICENSE  Tools.cpp  Tools.h  libmimeapps.pro  main.cpp
